--- a/JSPEx/.settings/org.eclipse.core.resources.prefs
+++ b/JSPEx/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
 encoding//WebContent/ItemDescriptionList.jsp=UTF-8
+encoding//WebContent/MakeOrder.jsp=UTF-8
 encoding//src/CAR/ItemManager.java=UTF-8
 encoding//src/CAR/Register.java=UTF-8
