--- a/CAR/.settings/org.eclipse.core.resources.prefs
+++ b/CAR/.settings/org.eclipse.core.resources.prefs
@@ -1,5 +1,7 @@
 eclipse.preferences.version=1
 encoding//WebContent/ItemDescriptionList.jsp=UTF-8
 encoding//WebContent/MakeOrder.jsp=UTF-8
+encoding//WebContent/ViewOrder.jsp=UTF-8
 encoding//src/CAR/ItemManager.java=UTF-8
+encoding//src/CAR/Order.java=UTF-8
 encoding//src/CAR/Register.java=UTF-8
