--- a/CAR/.settings/org.eclipse.core.resources.prefs
+++ b/CAR/.settings/org.eclipse.core.resources.prefs
@@ -1,11 +1,10 @@
+=\=\=\=\=\=\=
+<<<<<<<=HEAD
+>>>>>>>=cb2d094652a2bd3764cec82136e3e9377eeeb69c
 eclipse.preferences.version=1
 encoding//WebContent/ItemDescriptionList.jsp=UTF-8
-<<<<<<< HEAD
-=======
 encoding//WebContent/MakeOrder.jsp=UTF-8
 encoding//WebContent/ViewOrder.jsp=UTF-8
->>>>>>> cb2d094652a2bd3764cec82136e3e9377eeeb69c
 encoding//src/CAR/ItemManager.java=UTF-8
 encoding//src/CAR/Order.java=UTF-8
 encoding//src/CAR/Register.java=UTF-8
-encoding//src/com/car/MakeOrder.jsp=UTF-8
